--- a/162parm_Currentstatus.Rmd
+++ b/162parm_Currentstatus.Rmd
@@ -569,7 +569,7 @@ for (i in 1:max_number_of_plots){
 
 plotpairs <- params$extra_pairwise_plots %>%
   gsub(" ", "", ., fixed = TRUE) %>%
-  strsplit(x, split = ";") %>%
+  strsplit(split = ";") %>%
   .[[1]] %>%
   purrr::map(~strsplit(., split = ",")[[1]])
 
