--- a/161parm_Time_series_tocton.Rmd
+++ b/161parm_Time_series_tocton.Rmd
@@ -359,7 +359,9 @@ get_df_tocton_decrease <- function(data, variable_string){
         slope_tocton_vs_time < 0 & p_tocton_vs_time <= 0.05 ~ 1,
         TRUE ~ 0)
     )
-  df[c(variables, "country")]   # because 'country' will be used for statistics further down
+  # Variables that will be included in excel output (removed afterwards)
+  id_vars <- c("station_id", "station_code", "station_name", "country", "region", "continent")
+  df[c(id_vars, variables)]
 }
 
 
@@ -401,8 +403,15 @@ cat("Number of complete observations by country: \n")
 table(df_analysis$country, complete)
 
 # Keep only complete cases
-df_analysis <- df_analysis[complete.cases(df_analysis),] %>%
-  select(-country)
+df_analysis <- df_analysis[complete.cases(df_analysis),]
+
+# Save to excel
+fn <- paste0(substr(params$document_title, 1, 5), "_data.xlsx")
+writexl::write_xlsx(df_analysis, paste0("Data_analysed/", fn))
+
+# Remove variables defined as 'id_vars' in function above
+df_analysis <- df_analysis %>%
+  select(-station_id, -station_code, -station_name, -country, -region, -continent)
 
 cat("\n\n")
 cat("Original data: n =", nrow(dat), "\n")
