--- a/161parm_Time_series_tocton.Rmd
+++ b/161parm_Time_series_tocton.Rmd
@@ -52,7 +52,7 @@ As 160, but analysing the trend in TOC/TON ratio
     - Land cover 
   
 Technical details: This html file was created with `161parm_Time_series_tocton.Rmd` run with `161parm_run_markdown.R`    
-Code: https://github.com/DagHjermann/icpw-R   
+Code: https://github.com/DagHjermann/icpw-R  
 
 ## 1. Libraries  
 ```{r, results='hide', message=FALSE, warning=FALSE}
@@ -65,7 +65,7 @@ library(lubridate)
 library(ggplot2)
 
 # Too many packages, not all are used
-library(mapview)
+# library(mapview)
 library(visreg)     # visreg
 library(rkt)        # Theil -Sen Regression
 
@@ -113,13 +113,6 @@ cat("Regression slopes and medians from:", sQuote(file), ",n =", nrow(reg_ratio)
 
 # Station metadata
 # THESE WILL BE ADDED WITH LAND COVER  
-# file <- "trends_1992-2016_toc_totn_no3_relax_italy_stations.csv"
-# fn <- paste0(folder, "/", file)
-# df_metadata <- read.csv(fn, encoding = "UTF-8")
-# cat("Regression result metadata:", sQuote(file), ",n =", nrow(df_metadata), "\n\n")
-
-# cat("Countries with trends: \n")
-# xtabs(~country, df_metadata)  
 
 ```
 
@@ -163,15 +156,20 @@ df3 <- reg_ratio %>%
          TON = `TON_µg/l N`)
 
 cat("\n")
-cat("df1, n =", nrow(df1), "\n")
+cat("df1, n =", nrow(df1), " (number of rows for slopes, including NA values in toc/ton slope)\n")
 cat("df2, n =", nrow(df2), "\n")
 cat("df3, n =", nrow(df3), "\n")
 
-dat_1 <- df1 %>%
+dat_1_all <- df1 %>%
   full_join(df2, by = "station_id") %>%
   full_join(df3, by = "station_id")
 
-cat("dat_1, n =", nrow(dat_1), "\n")
+cat("dat_1_all, n =", nrow(dat_1_all), " (includes series without toc/ton)\n")
+
+dat_1 <- dat_1_all %>%
+  filter(!is.na(slope_tocton_vs_time))
+
+cat("dat_1, n =", nrow(dat_1), " (all data with existing values of 'slope_tocton_vs_time')\n")
 
 ```
 
@@ -229,15 +227,27 @@ dat_2 <- dat_1 %>%
 
 fn <- "https://github.com/JamesSample/icpw2/raw/master/thematic_report_2020/results/climate/cru_climate_trends_icpw_stns.csv"
 
-df_climate_mean <- read_csv(fn) %>% 
+df_climate <- read_csv(fn, 
+                       col_types = cols(
+                         station_id = col_double(),
+                         variable = col_character(),
+                         median = col_double(),
+                         mk_p_val = col_double(),
+                         mk_trend = col_character(),
+                         sen_slp = col_double(),
+                         sen_incpt = col_double(),
+                         sen_trend = col_character()
+                       ))
+                            
+df_climate_mean <- df_climate %>% 
   select(station_id, variable, median) %>%
   pivot_wider(names_from = "variable", values_from = "median")
 cat("\n")
 # names(df_climate_mean)
 
-df_climate_slope <- read_csv(fn) %>%
+df_climate_slope <- df_climate %>%
   select(station_id, variable, sen_slp) %>%
-  pivot_wider(names_from = "variable", values_from = "sen_slp", names_prefix = "Slope_")
+  pivot_wider(names_from = "variable", values_from = "sen_slp", names_prefix = "slope_")
 
 # Add
 dat_3 <- dat_2 %>%
@@ -277,18 +287,19 @@ dat_4 <- left_join2(dat_3,
 
 
 ```
-
-### Drop locations with >5% cultivated     
-- also excluding stations 23517, 38273  
+### Drop locations with >5% cultivated and >5% urban     
+- also excluding stations 23517, 38273    
 ```{r}
 
 cultivated_threshold <- 5
+urban_threshold <- 5
 
 dat_5 <- dat_4 %>%
-  filter(cultivated <= cultivated_threshold) %>%
-  filter(!station_id %in% c(23517, 38273)) 
-
-cat(nrow(dat_4) - nrow(dat_5), "stations with >",  cultivated_threshold, "% cultivated deleted \n")
+  filter2(!station_id %in% c(23517, 38273), text = "Deleted stations 23517, 38273") %>%
+  filter2(cultivated <= cultivated_threshold, 
+          text = paste("Deleted stations with >", cultivated_threshold, "% cultivated")) %>%
+  filter2(urban <= urban_threshold, 
+          text = paste("Deleted stations with >", urban_threshold, "% urban"))
 
 ```
 
@@ -377,18 +388,22 @@ cat(params$selected_vars)
 cat("\n-------------------------------------------------------------\n")
 
 dat_filtered <- dat %>%
-  filter(region != "AtlCan")
+  filter2(region != "AtlCan" & country != "Italy", text = "Remove AtlCan and Italy")  
 
-df_analysis <- get_df_tocton_decrease(dat_filtered, params$selected_vars)  
+df_analysis_allrows <- get_df_tocton_decrease(dat_filtered, params$selected_vars)  
 
-# table(df_analysis$tocton_decrease)
+# Save to excel
+fn <- paste0(substr(params$document_title, 1, 3), "_data.xlsx")
+writexl::write_xlsx(df_analysis_allrows, fn)
+cat("Dataset after removing urban, cultivated, AtlCan and Italy saved as", sQuote(fn), "\n\n")
 
 
+# table(df_analysis_allrows$tocton_decrease)
 
 # names(dat) %>% paste(collapse = ", ")
 
 cat("Number of missing values per variable: \n")
-apply(is.na(df_analysis), 2, sum) 
+apply(is.na(df_analysis_allrows), 2, sum) 
 cat("\n")
 
 # What is missing? (long output)
@@ -399,15 +414,15 @@ if (FALSE){
 }
 
 cat("Number of complete observations: \n")
-complete <- complete.cases(df_analysis)
+complete <- complete.cases(df_analysis_allrows)
 table(complete)
 
 cat("\n\n")
 cat("Number of complete observations by country: \n")
-table(df_analysis$country, complete)
+table(df_analysis_allrows$country, complete)
 
 # Keep only complete cases
-df_analysis <- df_analysis[complete.cases(df_analysis),]
+df_analysis <- df_analysis_allrows[complete.cases(df_analysis_allrows),]
 
 # Save to excel
 fn <- paste0(substr(params$document_title, 1, 5), "_data.xlsx")
@@ -418,9 +433,9 @@ df_analysis <- df_analysis %>%
   select(-station_id, -station_code, -station_name, -country, -region, -continent)
 
 cat("\n\n")
-cat("Original data: n =", nrow(dat), "\n")
-cat("Data after filtering: n =", nrow(dat_filtered), "\n")
-cat("Analysis: n =", nrow(df_analysis), "\n")
+cat("Data before removing AtlCan and Italy: n =", nrow(dat), "\n")
+cat("Data after removing AtlCan and Italy: n =", nrow(df_analysis_allrows), "\n")
+cat("Data after removing missing predictors: n =", nrow(df_analysis), "\n")
 
 
 ```
