--- a/160parm_Time_series_results_James.Rmd
+++ b/160parm_Time_series_results_James.Rmd
@@ -390,6 +390,7 @@ dat %>%
 
 ### a. Selection of variables  
 * Select variables to use, and thereby also cases  
+* Saves data both before and after rows with removing missing predictors are removed
 ```{r}
 
 get_df_no3_decline <- function(data, variable_string){
@@ -416,8 +417,8 @@ df_analysis_allrows <- get_df_no3_decline(dat, params$selected_vars)
 
 # Save to excel
 fn <- paste0(substr(params$document_title, 1, 3), "_data.xlsx")
-writexl::write_xlsx(df_analysis_allrows, fn)
-cat("Dataset after removing urban and cultivated saved as", sQuote(fn), "\n\n")
+writexl::write_xlsx(df_analysis, paste0("Data_analysed/", fn))
+cat("\nDataset after removing urban and cultivated saved as", sQuote(fn), "\n\n")
 
 # names(dat) %>% paste(collapse = ", ")
 
