--- a/161parm_Time_series_tocton.Rmd
+++ b/161parm_Time_series_tocton.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "`r params$document_title`"
 author: "DHJ"
-date: "8 5 2020"
+date: "7 12 2021"
 output: 
   html_document:
     toc: true    
@@ -13,7 +13,7 @@ params:
   text_dataset: 
     value: 'Data with slope_dep_vs_time, NO3, and TOTN_dep'
   selected_vars: 
-    value: 'tocton_decrease,catchment_area, TOC, TON,slope_toc_vs_time, slope_ton_vs_time, slope_dep_vs_time, TOTN_dep, latitude, longitude, altitude,pre, tmp, urban, cultivated, coniferous, decid_mixed, total_shrub_herbaceous,wetland, lake_water, bare_sparse'
+    value: 'tocton_decrease,catchment_area, TOC, TON, TOCTON, slope_toc_vs_time, slope_ton_vs_time, slope_dep_vs_time, TOTN_dep, latitude, longitude, altitude,pre, tmp, urban, cultivated, coniferous, decid_mixed, total_shrub_herbaceous,wetland, lake_water, bare_sparse'
   extra_pairwise_plots:
     value: 'TOC,NO3; slope_dep_vs_time,TOTN_dep; altitude,decid_mixed'
   pairwise_plots_same_scale:
@@ -358,12 +358,18 @@ dat %>%
 
 
 ## 4. Select data    
+   
+**See Section 2 - Drop locations... for data rows deleted before this part**    
 
-### a. Select variables  
+### a. Select variables   
 * Select variables to use, and thereby also cases   
 * Also, 'AtlCan' data are excluded   
 * Saves data both before and after rows with removing missing predictors are removed
 ```{r}
+
+# Variables that will be included in excel output (removed afterwards)
+vars_for_excel <- c("slope_tocton_vs_time", "station_id", "station_code", 
+                    "station_name", "country", "region", "continent")
 
 get_df_tocton_decrease <- function(data, variable_string){
   variable_string <- gsub(" ", "", variable_string)
@@ -375,9 +381,6 @@ get_df_tocton_decrease <- function(data, variable_string){
         slope_tocton_vs_time < 0 & p_tocton_vs_time <= 0.05 ~ 1,
         TRUE ~ 0)
     )
-  # Variables that will be included in excel output (removed afterwards)
-  vars_for_excel <- c("slope_tocton_vs_time", "station_id", "station_code", 
-                      "station_name", "country", "region", "continent")
   df[c(vars_for_excel, variables)]
 }
 
@@ -389,6 +392,8 @@ cat("Variables: \n")
 cat(params$selected_vars)
 cat("\n-------------------------------------------------------------\n")
 
+cat("\nStarting with partially filtered data - see 'Section 2 - Drop locations...' \n\n")
+
 dat_filtered <- dat %>%
   filter2(region != "AtlCan" & country != "Italy", text = "Remove AtlCan and Italy")  
 
@@ -397,7 +402,7 @@ df_analysis_allrows <- get_df_tocton_decrease(dat_filtered, params$selected_vars
 # Save to excel
 fn <- paste0(substr(params$document_title, 1, 3), "_data.xlsx")
 writexl::write_xlsx(df_analysis_allrows, paste0("Data_analysed/", fn))
-cat("\nDataset after removing urban, cultivated, AtlCan and Italy saved as", sQuote(fn), "\n\n")
+cat("\nDataset at this point saved as", sQuote(fn), "\n\n")
 
 
 # table(df_analysis_allrows$tocton_decrease)
@@ -435,7 +440,7 @@ sel <- names(df_analysis) %in% vars_for_excel
 df_analysis <- df_analysis[!sel]
 
 cat("\n\n")
-cat("Data before removing AtlCan and Italy: n =", nrow(dat), "\n")
+cat("Data before removing AtlCan and Italy: n =", nrow(dat), " (also see 'Section 2 - Drop locations...')\n")
 cat("Data after removing AtlCan and Italy: n =", nrow(df_analysis_allrows), "\n")
 cat("Data after removing missing predictors: n =", nrow(df_analysis), "\n")
 
@@ -634,7 +639,7 @@ for (i in 1:length(plotdata)){
 
 
 ## 6. Logistic regression      
-```{r, results  = "hold"}
+```{r logistic_regression, results  = "hold"}
 
 #   tocton_decrease ~ as.formula(params$logistic_formula),
 # 
