--- a/160parm_Time_series_results_James.Rmd
+++ b/160parm_Time_series_results_James.Rmd
@@ -62,7 +62,7 @@ library(lubridate)
 library(ggplot2)
 
 # Too many packages, not all are used
-library(mapview)
+# library(mapview)
 library(visreg)     # visreg
 library(rkt)        # Theil -Sen Regression
 
@@ -580,6 +580,55 @@ cat("Error rate for training data:", round(error_fraction*100, 1), "%\n")
 
 ```
 
+#### c1c. Quasi R-squared   
+- Proportion of deviance explained    
+```{r 5c1c_calculate_deviance_explained}
+
+# Make data frame with P (modelled probability of no3_decline), Obs (observed no3_decline, 0 or 1),
+#   and log-likelihood of data given the model
+df_prob <- tibble(
+  P = pred_prob[,2], 
+  Obs = as.numeric(full_set$no3_decline) - 1
+) %>%
+  mutate(
+    Lik = P*Obs + (1-P)*(1-Obs),
+    Loglik = log(P*Obs + (1-P)*(1-Obs))
+  )
+
+# Null model (same probability for all observations)
+df_prob$P_null <- mean(df_prob$Obs)
+
+# Null probability   
+df_prob <- df_prob %>%
+  mutate(
+    Loglik_null = log(P_null*Obs + (1-P_null)*(1-Obs))
+    )
+    
+#
+# Summary statistics
+#
+dev_model <- -2*sum(df_prob$Loglik)
+dev_null <- -2*sum(df_prob$Loglik_null)
+cat("Deviance of random forest model:", dev_model, "\n")
+cat("Deviance of null model:", dev_null, "\n")
+
+Quasi_R2 <- (dev_null - dev_model)/dev_null
+cat("Proportion of deviance explained by model (quasi R.squared):", Quasi_R2, "\n")
+
+#
+# Plot
+#
+ggplot(df_prob, aes(P, Obs)) + 
+  geom_jitter(width = 0, height = 0.05) +
+  labs(x = "Probability of observing '1' according to model",
+       y = "Actual observation"
+  )
+
+
+
+```
+
+
 #### c2. Importance of variables
 ```{r 5c2_calculate_importance}
 
@@ -599,7 +648,6 @@ plot_multi_way_importance(importance,
                           size_measure = "p_value", no_of_labels = 12)
 
 ```
-
 
 
 #### c3. Random forest, show partial effects  
@@ -706,6 +754,8 @@ for (i in 1:length(plotdata)){
 # visreg(dd1b_mod1, scale = "response")
 
 ```
+
+
 
 
 ## 6. Logistic regression       
