--- a/160parm_Time_series_results_James.Rmd
+++ b/160parm_Time_series_results_James.Rmd
@@ -596,6 +596,8 @@ cat("Error rate for training data:", round(error_fraction*100, 1), "%\n")
 - Proportion of deviance explained    
 ```{r 5c1c_calculate_deviance_explained}
 
+pred_prob <- predict(model1, type = "prob")
+
 # Make data frame with P (modelled probability of no3_decline), Obs (observed no3_decline, 0 or 1),
 #   and log-likelihood of data given the model
 df_prob <- tibble(
