--- a/160parm_Time_series_results_James.Rmd
+++ b/160parm_Time_series_results_James.Rmd
@@ -562,7 +562,39 @@ error_fraction <- mean(
     (pred_valid == 1 & valid_set$no3_decline_f == 0))
 cat("Error rate for training data:", round(error_fraction*100, 1), "%\n")
 
+
 ```
+#### c1c. Quasi R-squared   
+- Proportion of deviance explained    
+```{r 5c1c_calculate_deviance_explained}
+
+# Make data frame with P (modelled probability of no3_decline), Obs (observed no3_decline, 0 or 1),
+#   and log-likelihood of data given the model
+df_prob <- tibble(
+  P = pred_prob[,2], 
+  Obs = as.numeric(full_set$no3_decline) - 1
+) %>%
+  mutate(
+    Lik = P*Obs + (1-P)*(1-Obs),
+    Loglik = log(P*Obs + (1-P)*(1-Obs))
+  )
+
+# Null model (same probability for all observations)
+df_prob$P_null <- mean(df_prob$Obs)
+
+# Null probability   
+df_prob <- df_prob %>%
+  mutate(
+    Loglik_null = log(P_null*Obs + (1-P_null)*(1-Obs))
+    )
+    
+dev_model <- -2*sum(df_prob$Loglik)
+dev_null <- -2*sum(df_prob$Loglik_null)
+
+Quasi_R2 <- (dev_null - dev_model)/dev_null
+
+```
+
 
 #### c2. Importance of variables
 ```{r 5c2_calculate_importance}
