--- a/160parm_Time_series_results_James.Rmd
+++ b/160parm_Time_series_results_James.Rmd
@@ -12,8 +12,6 @@ params:
     value: '160x Analyse NO3 decline - test run'
   text_dataset: 
     value: 'Data with slope_dep_vs_time, NO3, and TOTN_dep'
-  extra_selection_variable: 'continent'
-  extra_selection_values: 'Europe;North America'
   selected_vars: 
     value: 'no3_decline,catchment_area, TOC,slope_dep_vs_time, NO3, TOTN_dep, latitude, longitude, altitude,pre, tmp, slope_pre, slope_tmp, urban, cultivated, coniferous, decid_mixed, total_shrub_herbaceous,wetland, lake_water, bare_sparse'
   extra_pairwise_plots:
@@ -64,7 +62,7 @@ library(lubridate)
 library(ggplot2)
 
 # Too many packages, not all are used
-# library(mapview)
+library(mapview)
 library(visreg)     # visreg
 library(rkt)        # Theil -Sen Regression
 
@@ -345,32 +343,12 @@ dat_5 <- dat_4 %>%
           text = paste("Deleted stations with >", urban_threshold, "% urban"))
 
 ```
-### Extra selection  
-```{r}
 
-selection_values <- params$extra_selection_values %>% strsplit(split = ";") %>% .[[1]]
-sel <- dat_5[[params$extra_selection_variable]] %in% selection_values
-sum(sel)
-mean(sel)
-dat_6 <- dat_5[sel,]
-
-```
-
-### Extra selection (given by 'extra_selection_variable')  
-```{r}
-
-selection_values <- params$extra_selection_values %>% strsplit(split = ";") %>% .[[1]]
-sel <- dat_5[[params$extra_selection_variable]] %in% selection_values
-sum(sel)
-mean(sel)
-dat_6 <- dat_5[sel,]
-
-```
 
 ### Data set used  
 ```{r}
 
-dat <- dat_6
+dat <- dat_5
 
 ```
 
@@ -600,59 +578,7 @@ error_fraction <- mean(
     (pred_valid == 1 & valid_set$no3_decline_f == 0))
 cat("Error rate for training data:", round(error_fraction*100, 1), "%\n")
 
-
 ```
-
-#### c1c. Quasi R-squared   
-- Proportion of deviance explained    
-```{r 5c1c_calculate_deviance_explained}
-
-pred_prob <- predict(model1, type = "prob")
-
-# Make data frame with P (modelled probability of no3_decline), Obs (observed no3_decline, 0 or 1),
-#   and log-likelihood of data given the model
-df_prob <- tibble(
-  P = pred_prob[,2], 
-  Obs = as.numeric(full_set$no3_decline) - 1
-) %>%
-  mutate(
-    Lik = P*Obs + (1-P)*(1-Obs),
-    Loglik = log(P*Obs + (1-P)*(1-Obs))
-  )
-
-# Null model (same probability for all observations)
-df_prob$P_null <- mean(df_prob$Obs)
-
-# Null probability   
-df_prob <- df_prob %>%
-  mutate(
-    Loglik_null = log(P_null*Obs + (1-P_null)*(1-Obs))
-    )
-    
-#
-# Summary statistics
-#
-dev_model <- -2*sum(df_prob$Loglik)
-dev_null <- -2*sum(df_prob$Loglik_null)
-cat("Deviance of random forest model:", dev_model, "\n")
-cat("Deviance of null model:", dev_null, "\n")
-
-Quasi_R2 <- (dev_null - dev_model)/dev_null
-cat("Proportion of deviance explained by model (quasi R.squared):", Quasi_R2, "\n")
-
-#
-# Plot
-#
-ggplot(df_prob, aes(P, Obs)) + 
-  geom_jitter(width = 0, height = 0.05) +
-  labs(x = "Probability of observing '1' according to model",
-       y = "Actual observation"
-  )
-
-
-
-```
-
 
 #### c2. Importance of variables
 ```{r 5c2_calculate_importance}
@@ -666,13 +592,14 @@ importance <- measure_importance(model1)
 
 ```{r}
 
-plot_multi_way_importance(importance, size_measure = "no_of_nodes", no_of_labels = 6)  
+plot_multi_way_importance(importance, size_measure = "no_of_nodes", no_of_labels = 12)  
 plot_multi_way_importance(importance, 
                           x_measure = "accuracy_decrease", 
                           y_measure = "gini_decrease", 
-                          size_measure = "p_value", no_of_labels = 6)
+                          size_measure = "p_value", no_of_labels = 12)
 
 ```
+
 
 
 #### c3. Random forest, show partial effects  
@@ -748,14 +675,6 @@ for (i in 1:length(plotdata)){
 
   }
   
-  # Save gg object for later plotting / changes
-  fn <- paste0(
-    "Figures/Partial_plots/gg_",
-    params$document_title %>% stringr::str_extract("([^[[:blank:]]]+)"),
-    "_", i, ".rds")
-  saveRDS(gg, fn)
-  
-  
 }
   
 
@@ -787,8 +706,6 @@ for (i in 1:length(plotdata)){
 # visreg(dd1b_mod1, scale = "response")
 
 ```
-
-
 
 
 ## 6. Logistic regression       
