--- a/165parm_Time_series_ton_continuous.Rmd
+++ b/165parm_Time_series_ton_continuous.Rmd
@@ -382,7 +382,7 @@ dat <- dat %>%
 df_analysis_allrows <- add_flag_variable(dat, params$selected_vars)  
 
 # Save to excel
-fn <- paste0(substr(params$document_title, 1, 3), "_", response_var, "_data.xlsx")
+fn <- paste0(substr(params$document_title, 1, 3), "_", params$response_variable, "_data.xlsx")
 writexl::write_xlsx(df_analysis_allrows, paste0("Data_analysed/", fn))
 cat("\nDataset after removing urban, cultivated, PL05 saved as", sQuote(fn), "\n\n")
 
@@ -606,6 +606,8 @@ if (FALSE){
                             size_measure = "p_value", no_of_labels = 6)
 }
 
+importance
+
 ```
 
 
@@ -617,7 +619,7 @@ if (FALSE){
 # Which variables to include:
 variables_for_plot <- importance %>%
   mutate(variable = levels(variable)[as.numeric(variable)]) %>%
-  arrange(desc(gini_decrease)) %>%
+  arrange(desc(times_a_root)) %>%
   pull(variable) %>%
   head(12)   # pick the first 12 variables (or less)
 
@@ -756,6 +758,7 @@ subset(dredged_models, delta < 2)
 # select(as.data.frame(df) %>% round(6), -`(Intercept)`, -logLik, -AICc)
 
 ```
+
 ```{r, echo = FALSE}
 
 #
