Fixing bugs in 161parm

--- a/161parm_Time_series_tocton.Rmd
+++ b/161parm_Time_series_tocton.Rmd
@@ -14,6 +14,8 @@ params:
     value: 'Data with slope_dep_vs_time, NO3, and TOTN_dep'
   selected_vars: 
     value: 'tocton_decrease,catchment_area, TOC, TON, TOCTON, slope_toc_vs_time, slope_ton_vs_time, slope_dep_vs_time, TOTN_dep, latitude, longitude, altitude,pre, tmp, urban, cultivated, coniferous, decid_mixed, total_shrub_herbaceous,wetland, lake_water, bare_sparse'
+  response_variable: 
+    value: 'tocton_decrease_f'
   extra_pairwise_plots:
     value: 'TOC,NO3; slope_dep_vs_time,TOTN_dep; altitude,decid_mixed'
   pairwise_plots_same_scale:
@@ -635,12 +637,18 @@ full_set <- df_analysis  %>%
   select(-tocton_decrease, -longitude, - latitude) %>%
   as.data.frame()
 
+model1 <- randomForest(tocton_decrease_f ~ ., 
+                       data = full_set, 
+                       mtry = 5,
+                       importance = TRUE)
+
+model1
 
 # Predicting on full set
-pred_valid <- predict(model1, valid_set, type = "class")
+pred_full <- predict(model1, full_set, type = "class")
 
 # Checking classification accuracy
-table(pred_valid, valid_set$tocton_decrease_f)  
+table(pred_full, full_set$tocton_decrease_f)  
 
 ```
 
@@ -656,7 +664,7 @@ pred_prob <- predict(model1, type = "prob")
 #   and log-likelihood of data given the model
 df_prob <- tibble(
   P = pred_prob[,2], 
-  Obs = as.numeric(full_set$no3_decline) - 1
+  Obs = as.numeric(full_set$tocton_decrease_f) - 1
 ) %>%
   mutate(
     Lik = P*Obs + (1-P)*(1-Obs),
